@@ -77,7 +77,10 @@ void	collect_statistics()
 		}
 		else
 		{
+			/* Here is list of functions to call periodically */
 			collect_stats_interfaces(file);
+			collect_stats_diskdevices(file);
+
 			fclose(file);
 			rename("/tmp/zabbix_agentd.tmp2","/tmp/zabbix_agentd.tmp");
 		}
