@@ -51,6 +51,18 @@ double	NETLOADIN15(char *interface);
 double	NETLOADOUT1(char *interface);
 double	NETLOADOUT5(char *interface);
 double	NETLOADOUT15(char *interface);
+double	DISKREADOPS1(char *device);
+double	DISKREADOPS5(char *device);
+double	DISKREADOPS15(char *device);
+double	DISKREADBLKS1(char *device);
+double	DISKREADBLKS5(char *device);
+double	DISKREADBLKS15(char *device);
+double	DISKWRITEOPS1(char *device);
+double	DISKWRITEOPS5(char *device);
+double	DISKWRITEOPS15(char *device);
+double	DISKWRITEBLKS1(char *device);
+double	DISKWRITEBLKS5(char *device);
+double	DISKWRITEBLKS15(char *device);
 double	PING(void);
 double	SHAREDMEM(void);
 double	TOTALMEM(void);
